maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:13: error: too many arguments for method println: (x$1: Any)Unit
  System.out.println(x, y)
                    ^